// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`link changes the class when hovered 1`] = `
<a
  className="normal"
  href="http://wwww.facebook.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  facebook
</a>
`;

exports[`link changes the class when hovered 2`] = `
<a
  className="hovered"
  href="http://wwww.facebook.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  facebook
</a>
`;

exports[`link changes the class when hovered 3`] = `
<a
  className="normal"
  href="http://wwww.facebook.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  facebook
</a>
`;
